Open java.nio as well